icon and color changes

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
   <body>
     <div class="col-md-6 col-md-push-6">
         <div class="ct-icon-boxes">
-            <div class="ct-icon-box top-left iconMediaContact" onclick="location.href='#'">
+            <div class="ct-icon-box top-left" onclick="location.href='#'">
                 <div class="inner">
                     <div class="ct-icon-box__icon">
-                        <i class="fa fa-gamepad fa-4x" aria-hidden="true"></i>
+                        <i class="fa fa-newspaper-o fa-4x" aria-hidden="true"></i>
                     </div>
-                    <h3 class="ct-icon-box__header">
-                        Games
+                    <h3 class="ct-icon-box__header mt-3 font-weight-bold">
+                        News
                     </h3>
                 </div>
             </div>
-            <div class="ct-icon-box top-right iconNewsReleases" onclick="location.href='#'">
+            <div class="ct-icon-box top-right" onclick="location.href='#'">
                 <div class="inner">
                     <div class="ct-icon-box__icon">
-                        <i class="fa fa-book fa-4x" aria-hidden="true"></i>
+                        <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
                     </div>
-                    <h3 class="ct-icon-box__header">
-                        Books
+                    <h3 class="ct-icon-box__header mt-3 font-weight-bold">
+                        Events
                     </h3>
                 </div>
             </div>
-            <div class="ct-icon-box bottom-all iconMaterials" onclick="location.href='#'">
+            <div class="ct-icon-box bottom-all" onclick="location.href='#'">
                 <div class="inner">
                     <div class="ct-icon-box__icon">
-                        <i class="fa fa-music fa-4x" aria-hidden="true"></i>
+                        <i class="fa fa-picture-o fa-4x" aria-hidden="true"></i>
                     </div>
-                    <h3 class="ct-icon-box__header">
-                        Music
+                    <h3 class="ct-icon-box__header mt-3 font-weight-bold">
+                        Gallery
                     </h3>
                 </div>
             </div>
