responsive layout fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -17,7 +16,7 @@
     <title>Icons Hover Effect</title>
   </head>
   <body>
-    <div class="col-md-6 col-md-push-6">
+    <div class="col-md-8 col-md-push-8 container">
         <div class="ct-icon-boxes">
             <div class="ct-icon-box top-left" onclick="location.href='#'">
                 <div class="inner">
